[package]
name = "flying-tux-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
fontdb = "0.16.2"
glam = "0.27.0"
rand = "0.8.5"
sdl2 = { version = "0.36.0", features = ["ttf", "image"] }
